--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <!--Title-->
     <title>Fiorente Restaurant</title>
@@ -15,7 +16,14 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/rest16.png">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&family=Vollkorn+SC:wght@400;600;700;900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
     <header>
         header
@@ -29,4 +37,5 @@
 
 
 </body>
+
 </html>
