adding main font style to body element

--- a/index.html
+++ b/index.html
@@ -26,7 +26,15 @@
 
 <body>
     <header>
-        header
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="index.html">Menu</a>
+            <a href="index.html">Working Hours</a>
+            <a href="index.html">Chefs</a>
+            <a href="index.html">Reservation</a>
+            <a href="index.html">About Us</a>
+            <a href="index.html">Contacts</a>
+        </nav>
     </header>
     <main>
         main
