--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
 <body>
     <header>
+        <div class="navbar">
         <nav>
             <a href="index.html">Home</a>
             <a href="index.html">Menu</a>
@@ -35,6 +36,11 @@
             <a href="index.html">About Us</a>
             <a href="index.html">Contacts</a>
         </nav>
+    </div>
+    <div class="logo">
+        <h1>Fiorente Restaurant</h1><br>
+        <p>Italian De Luxe</p>
+    </div>
     </header>
     <main>
         main
