Adding and styling menu link

--- a/index.html
+++ b/index.html
@@ -38,8 +38,11 @@
         </nav>
     </div>
     <div class="logo">
-        <h1>Fiorente Restaurant</h1><br>
+        <h1>Fiorente<br> Restaurant</h1><br>
         <p>Italian De Luxe</p>
+    </div>
+    <div id="menuhead">
+           <p>Menu</p>
     </div>
     </header>
     <main>
