adding decoration around menu button

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
         <div class="navbar">
         <nav>
-            <a href="index.html">Home</a>
+            <a class="box-shadow"href="index.html">Home</a>
             <a href="index.html">Menu</a>
             <a href="index.html">Working Hours</a>
             <a href="index.html">Chefs</a>
