Adding Working Hours section

--- a/index.html
+++ b/index.html
@@ -27,26 +27,48 @@
 <body>
     <header>
         <div class="navbar">
-        <nav>
-            <a class="box-shadow"href="index.html">Home</a>
-            <a href="index.html">Menu</a>
-            <a href="index.html">Working Hours</a>
-            <a href="index.html">Chefs</a>
-            <a href="index.html">Reservation</a>
-            <a href="index.html">About Us</a>
-            <a href="index.html">Contacts</a>
-        </nav>
-    </div>
-    <div class="logo">
-        <h1>Fiorente<br> Restaurant</h1><br>
-        <p>Italian De Luxe</p>
-    </div>
-    <div id="menuhead">
-           <p>Menu</p>
-    </div>
+            <nav>
+                <a class="botbor" href="index.html">Home</a>
+                <a class="botbor" href="index.html">Menu</a>
+                <a class="botbor" href="index.html">Working Hours</a>
+                <a class="botbor" href="index.html">Chefs</a>
+                <a class="botbor" href="index.html">Reservation</a>
+                <a class="botbor" href="index.html">About Us</a>
+                <a class="botbor" href="index.html">Contacts</a>
+            </nav>
+        </div>
+        <div class="logo">
+            <h1>Fiorente<br> Restaurant</h1><br>
+            <p>Italian De Luxe</p>
+        </div>
+        <div id="menuhead">
+            <p>Menu</p>
+        </div>
     </header>
     <main>
-        main
+        <section class="shedule">
+            <h1>Working Hours</h1>
+            <div class="menushed">
+                <div>
+                    <h3>Standart Menu</h3><br>
+                    <p>Mon - Fri 9:00-23:00</p><br>
+                    <p>Sat - Sun 10:00-19:00</p><br>
+                </div>
+                <div>
+                    <h3>Special Menu</h3><br>
+                    <p>Wed - Fri 13:00-20:00</p><br>
+                    <p>Fri - Sun 14:00-19:00</p><br>
+                </div>
+                <div>
+                    <h3>Gourment Menu</h3><br>
+                    <p>Fri - Sat 17:00-20:00</p><br>
+                    <p>Sat - Sun 19:00-21:00</p><br>
+                </div>
+            </div>
+            
+        <section class="chefs">
+        <h1>Chefs</h1>
+        </section>
     </main>
     <footer>
         footer
