making nav responsive

--- a/index.html
+++ b/index.html
@@ -25,18 +25,21 @@
 </head>
 
 <body>
-    <header>
-        <div class="navbar">
+    <header> 
+            <div class="navigation">  
             <nav>
-                <a class="botbor" href="index.html">Home</a>
-                <a class="botbor" href="index.html">Menu</a>
-                <a class="botbor" href="index.html">Working Hours</a>
-                <a class="botbor" href="index.html">Chefs</a>
-                <a class="botbor" href="index.html">Reservation</a>
-                <a class="botbor" href="index.html">About Us</a>
-                <a class="botbor" href="index.html">Contacts</a>
+                <ul id="menu">
+                    <li><a href="index.html" class="active">Home</a></li>
+                    <li><a href="gallery.html">Menu</a></li>
+                    <li><a href="signup.html">Working Hours</a></li>
+                    <li><a href="signup.html">Chefs</a></li>
+                    <li><a href="signup.html">Reservation</a></li>
+                    <li><a href="signup.html">About US</a></li>
+                    <li><a href="signup.html">Contacts</a></li>
+                </ul>
             </nav>
-        </div>
+         </div>   
+           
         <div class="logo">
             <h1>Fiorente<br> Restaurant</h1><br>
             <p>Italian De Luxe</p>
@@ -65,9 +68,16 @@
                     <p>Sat - Sun 19:00-21:00</p><br>
                 </div>
             </div>
-            
+
         <section class="chefs">
         <h1>Chefs</h1>
+        <div class="chefdiv">
+            <div id="chef1"></div>
+            <div id="chef1"></div>
+            <div id="chef1"></div>
+            <div id="chef1"></div>
+            <div id="chef1"></div>
+        </div>
         </section>
     </main>
     <footer>
