Making logo and menu button responsive on small screen

--- a/index.html
+++ b/index.html
@@ -25,27 +25,31 @@
 </head>
 
 <body>
-    <header> 
-            <div class="navigation">  
+    <header>
+        <h2><a href="index.html">Fiorente</a></h2>
+        <input type="checkbox" id="nav-toggle" name="nav-toggle">
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
+        <div class="navigation">
             <nav>
                 <ul id="menu">
-                    <li><a href="index.html" class="active">Home</a></li>
-                    <li><a href="gallery.html">Menu</a></li>
-                    <li><a href="signup.html">Working Hours</a></li>
-                    <li><a href="signup.html">Chefs</a></li>
-                    <li><a href="signup.html">Reservation</a></li>
-                    <li><a href="signup.html">About US</a></li>
-                    <li><a href="signup.html">Contacts</a></li>
+                    <li><a href="index.html" class="active navhov">Home</a></li>
+                    <li><a href="gallery.html" class="navhov">Menu</a></li>
+                    <li><a href="signup.html" class="navhov">Working Hours</a></li>
+                    <li><a href="signup.html" class="navhov">Chefs</a></li>
+                    <li><a href="signup.html" class="navhov">Reservation</a></li>
+                    <li><a href="signup.html" class="navhov">About US</a></li>
+                    <li><a href="signup.html" class="navhov">Contacts</a></li>
                 </ul>
             </nav>
-         </div>   
-           
+        </div>
         <div class="logo">
             <h1>Fiorente<br> Restaurant</h1><br>
             <p>Italian De Luxe</p>
         </div>
         <div id="menuhead">
-            <p>Menu</p>
+            <p class="navhov">Menu</p>
         </div>
     </header>
     <main>
@@ -69,22 +73,23 @@
                 </div>
             </div>
 
-        <section class="chefs">
-        <h1>Chefs</h1>
-        <div class="chefdiv">
-            <div id="chef1"></div>
-            <div id="chef1"></div>
-            <div id="chef1"></div>
-            <div id="chef1"></div>
-            <div id="chef1"></div>
-        </div>
-        </section>
+            <section class="chefs">
+                <h1>Chefs</h1>
+                <div class="chefdiv">
+                    <div id="chef1"></div>
+                    <div id="chef1"></div>
+                    <div id="chef1"></div>
+                    <div id="chef1"></div>
+                    <div id="chef1"></div>
+                </div>
+            </section>
     </main>
     <footer>
         footer
     </footer>
 
-
+ <!-- Font Awesome kit -->
+ <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
