--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <nav>
                 <ul id="menu">
                     <li><a href="index.html" class="active navhov">Home</a></li>
-                    <li><a href="gallery.html" class="navhov">Menu</a></li>
-                    <li><a href="signup.html" class="navhov">Working Hours</a></li>
-                    <li><a href="signup.html" class="navhov">Chefs</a></li>
-                    <li><a href="signup.html" class="navhov">Reservation</a></li>
-                    <li><a href="signup.html" class="navhov">About US</a></li>
-                    <li><a href="signup.html" class="navhov">Contacts</a></li>
+                    <li><a href="gallery.html" class="navhov"> Menu</a></li>
+                    <li><a href="signup.html" class="navhov"> Working Hours</a></li>
+                    <li><a href="signup.html" class="navhov"> Chefs</a></li>
+                    <li><a href="signup.html" class="navhov"> Reservation</a></li>
+                    <li><a href="signup.html" class="navhov"> About US</a></li>
+                    <li><a href="signup.html" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -77,15 +77,38 @@
                 <h1>Chefs</h1>
                 <div class="chefdiv">
                     <div id="chef1"></div>
-                    <div id="chef1"></div>
-                    <div id="chef1"></div>
-                    <div id="chef1"></div>
-                    <div id="chef1"></div>
+                    <div id="chef2"></div>
+                    <div id="chef3"></div>
+                    <div id="chef4"></div>
+                    <div id="chef5"></div>
+                </div>
+                <div class="chefp">
+                <p>"Attention to detail is the secret ingredient in every masterpiece we create. Consistency, creativity, and dedication are the pillars of our culinary craft. We don't just cook; we curate experiences that tantalize the senses and leave lasting impressions. Behind every extraordinary dish lies a team united by a shared love for food and an unwavering commitment to excellence."<br>
+                </p>
+                <p id="paul"> Paulo Rigiotti</p>
+                
                 </div>
             </section>
     </main>
     <footer>
-        footer
+    <div class="fotdiv">
+        <div class="fotlogo"><h2>Fiorente</h2><p>Italian de luxe</p></div>
+        <div class="fotnav">
+            <nav>
+                <ul id="menu">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="gallery.html">Menu</a></li>
+                    <li><a href="signup.html">Working Hours</a></li>
+                    <li><a href="signup.html">Chefs</a></li>
+                    <li><a href="signup.html">Reservation</a></li>
+                    <li><a href="signup.html">About US</a></li>
+                    <li><a href="signup.html">Contacts</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="foticon"></div>
+        <div class="fotp"></div>
+    </div>
     </footer>
 
  <!-- Font Awesome kit -->
