--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             <nav>
                 <ul id="menu">
                     <li><a href="index.html" class="active navhov">Home</a></li>
-                    <li><a href="gallery.html" class="navhov"> Menu</a></li>
-                    <li><a href="signup.html" class="navhov"> Working Hours</a></li>
-                    <li><a href="signup.html" class="navhov"> Chefs</a></li>
-                    <li><a href="signup.html" class="navhov"> Reservation</a></li>
-                    <li><a href="signup.html" class="navhov"> About US</a></li>
-                    <li><a href="signup.html" class="navhov"> Contacts</a></li>
+                    <li><a href="menu.html" class="navhov"> Menu</a></li>
+                    <li><a href="#" class="navhov"> Working Hours</a></li>
+                    <li><a href="#" class="navhov"> Chefs</a></li>
+                    <li><a href="#" class="navhov"> Reservation</a></li>
+                    <li><a href="#" class="navhov"> About US</a></li>
+                    <li><a href="#" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -48,8 +48,10 @@
             <h1>Fiorente<br> Restaurant</h1><br>
             <p>Italian De Luxe</p>
         </div>
-        <div id="menuhead">
-            <p class="navhov">Menu</p>
+        <div class="menuheadcontainer">
+            <div id="menuhead">
+                <p class="navhov">Menu</p>
+            </div>
         </div>
     </header>
     <main>
@@ -73,46 +75,54 @@
                 </div>
             </div>
 
-            <section class="chefs">
-                <h1>Chefs</h1>
-                <div class="chefdiv">
-                    <div id="chef1"></div>
-                    <div id="chef2"></div>
-                    <div id="chef3"></div>
-                    <div id="chef4"></div>
-                    <div id="chef5"></div>
-                </div>
-                <div class="chefp">
-                <p>"Attention to detail is the secret ingredient in every masterpiece we create. Consistency, creativity, and dedication are the pillars of our culinary craft. We don't just cook; we curate experiences that tantalize the senses and leave lasting impressions. Behind every extraordinary dish lies a team united by a shared love for food and an unwavering commitment to excellence."<br>
-                </p>
-                <p id="paul"> Paulo Rigiotti</p>
-                
-                </div>
-            </section>
     </main>
     <footer>
-    <div class="fotdiv">
-        <div class="fotlogo"><h2>Fiorente</h2><p>Italian de luxe</p></div>
-        <div class="fotnav">
-            <nav>
-                <ul id="menu">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="gallery.html">Menu</a></li>
-                    <li><a href="signup.html">Working Hours</a></li>
-                    <li><a href="signup.html">Chefs</a></li>
-                    <li><a href="signup.html">Reservation</a></li>
-                    <li><a href="signup.html">About US</a></li>
-                    <li><a href="signup.html">Contacts</a></li>
-                </ul>
-            </nav>
+        <div class="fotdiv">
+            <div class="fotlogo">
+                <h2>Fiorente</h2>
+                <p>Italian de luxe</p>
+            </div>
+            <div class="fotnav">
+                <nav>
+                    <ul id="menu">
+                        <li><a href="index.html" class="navhov2">Home</a></li>
+                        <li><a href="menu.html" class="navhov2">Menu</a></li>
+                        <li><a href="#" class="navhov2"> Working Hours</a></li>
+                        <li><a href="#" class="navhov2">Chefs</a></li>
+                        <li><a href="#" class="navhov2">Reservation</a></li>
+                        <li><a href="#" class="navhov2">About US</a></li>
+                        <li><a href="#" class="navhov2">Contacts</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="foticon">
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://web.telegram.org/" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://twitter.com/login" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+            </div>
+            <div class="fotp">
+                <p>2024 Florente Restaurant. All rights reserved.</p>
+            </div>
         </div>
-        <div class="foticon"></div>
-        <div class="fotp"></div>
-    </div>
+        <section class="chefs">
+            <div class="chefslogo">
+
+            </div>
+            <div class="chefsphotos">
+                <div class="chef1"></div>
+                <div class="chef2"></div>
+                <div class="chef3"></div>
+                <div class="chef4"></div>
+                <div class="chef5"></div>
+            </div>
+            <div class="chefsquoute">
+
+            </div>
+        </section>
     </footer>
 
- <!-- Font Awesome kit -->
- <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
