fixing logo sizes on mobile screens

--- a/index.html
+++ b/index.html
@@ -74,7 +74,22 @@
                     <p>Sat - Sun 19:00-21:00</p><br>
                 </div>
             </div>
+        </section>
+        <section class="chefs">
+            <div id="chefslogo">
+                Chefs
+            </div>
+            <div class="chefsphotos">
+                <div id="chef1"></div>
+                <div id="chef2"></div>
+                <div id="chef3"></div>
+                <div id="chef4"></div>
+                <div id="chef5"></div>
+            </div>
+            <div id="chefsquoute">
 
+            </div>
+        </section>
     </main>
     <footer>
         <div class="fotdiv">
@@ -104,21 +119,6 @@
                 <p>2024 Florente Restaurant. All rights reserved.</p>
             </div>
         </div>
-        <section class="chefs">
-            <div class="chefslogo">
-
-            </div>
-            <div class="chefsphotos">
-                <div class="chef1"></div>
-                <div class="chef2"></div>
-                <div class="chef3"></div>
-                <div class="chef4"></div>
-                <div class="chef5"></div>
-            </div>
-            <div class="chefsquoute">
-
-            </div>
-        </section>
     </footer>
 
     <!-- Font Awesome kit -->
