adding photos and text to chefs section

--- a/index.html
+++ b/index.html
@@ -76,9 +76,7 @@
             </div>
         </section>
         <section class="chefs">
-            <div id="chefslogo">
-                Chefs
-            </div>
+                <h1>Chefs</h1>
             <div class="chefsphotos">
                 <div id="chef1"></div>
                 <div id="chef2"></div>
@@ -87,6 +85,12 @@
                 <div id="chef5"></div>
             </div>
             <div id="chefsquoute">
+                <p>"Attention to detail is the secret ingredient in every masterpiece we create. Consistency,
+                    creativity, and dedication are the pillars of our culinary craft. We don't just cook; we curate
+                    experiences that tantalize the senses and leave lasting impressions. Behind every extraordinary dish
+                    lies a team united by a shared love for food and an unwavering commitment to excellence."
+                </p>
+                <p id="paul">Paulo Rigiotti</p>
 
             </div>
         </section>
