making sections responsive on mobile devises

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <option>21:00</option>
                     <option>22:00</option>
                 </select>
-                <textarea type="input" placeholder="Do you have some special requirements?(optional)">
+                <textarea placeholder="Do you have some special requirements?(optional)">
                     
                   
                 </textarea>
