making reservation section responsive for small screens

--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="navigation">
             <nav>
                 <ul id="menu">
-                    <li><a href="index.html" class="active navhov">Home</a></li>
+                    <li><a href="index.html" class="navhov2 navhov">Home</a></li>
                     <li><a href="menu.html" class="navhov"> Menu</a></li>
-                    <li><a href="#" class="navhov"> Working Hours</a></li>
-                    <li><a href="#" class="navhov"> Chefs</a></li>
-                    <li><a href="#" class="navhov"> Reservation</a></li>
+                    <li><a href="#shedule" class="navhov"> Working Hours</a></li>
+                    <li><a href="#chefs" class="navhov"> Chefs</a></li>
+                    <li><a href="#reservation" class="navhov"> Reservation</a></li>
                     <li><a href="#" class="navhov"> About US</a></li>
                     <li><a href="#" class="navhov"> Contacts</a></li>
                 </ul>
@@ -55,7 +55,7 @@
         </div>
     </header>
     <main>
-        <section class="shedule">
+        <section id="shedule">
             <h1>Working Hours</h1>
             <div class="menushed">
                 <div>
@@ -75,7 +75,7 @@
                 </div>
             </div>
         </section>
-        <section class="chefs">
+        <section id="chefs">
             <h1>Chefs</h1>
             <div class="chefsphotos">
                 <div id="chef1"></div>
