--- a/menu.html
+++ b/menu.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <header>
+    <header id="menuheadbg">
         <h2><a href="index.html">Fiorente</a></h2>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
         <label for="nav-toggle" class="nav-toggle-label">
@@ -34,8 +34,8 @@
         <div class="navigation">
             <nav>
                 <ul id="menu">
-                    <li><a href="index.html" class="active navhov">Home</a></li>
-                    <li><a href="menu.html" class="navhov"> Menu</a></li>
+                    <li><a href="index.html" class="navhov">Home</a></li>
+                    <li><a href="menu.html" class="navhov navhov2"> Menu</a></li>
                     <li><a href="#" class="navhov"> Working Hours</a></li>
                     <li><a href="#" class="navhov"> Chefs</a></li>
                     <li><a href="#" class="navhov"> Reservation</a></li>
@@ -45,78 +45,49 @@
             </nav>
         </div>
         <div class="logo">
-            <h1>Fiorente<br> Restaurant</h1><br>
+            <h1>Fiorente<br> Menu</h1><br>
             <p>Italian De Luxe</p>
         </div>
-        <div id="menuhead">
-            <p class="navhov">Menu</p>
+        <div class="menuheadcontainer">
+            <div id="menuhead">
+                <p class="navhov">Menu</p>
+            </div>
         </div>
     </header>
     <main>
-        <section class="shedule">
-            <h1>Working Hours</h1>
-            <div class="menushed">
-                <div>
-                    <h3>Standart Menu</h3><br>
-                    <p>Mon - Fri 9:00-23:00</p><br>
-                    <p>Sat - Sun 10:00-19:00</p><br>
-                </div>
-                <div>
-                    <h3>Special Menu</h3><br>
-                    <p>Wed - Fri 13:00-20:00</p><br>
-                    <p>Fri - Sun 14:00-19:00</p><br>
-                </div>
-                <div>
-                    <h3>Gourment Menu</h3><br>
-                    <p>Fri - Sat 17:00-20:00</p><br>
-                    <p>Sat - Sun 19:00-21:00</p><br>
-                </div>
-            </div>
-
-            <section class="chefs">
-                <h1>Chefs</h1>
-                <div class="chefdiv">
-                    <div id="chef1"></div>
-                    <div id="chef2"></div>
-                    <div id="chef3"></div>
-                    <div id="chef4"></div>
-                    <div id="chef5"></div>
-                </div>
-                <div class="chefp">
-                <p>"Attention to detail is the secret ingredient in every masterpiece we create. Consistency, creativity, and dedication are the pillars of our culinary craft. We don't just cook; we curate experiences that tantalize the senses and leave lasting impressions. Behind every extraordinary dish lies a team united by a shared love for food and an unwavering commitment to excellence."<br>
-                </p>
-                <p id="paul"> Paulo Rigiotti</p>
-                
-                </div>
-            </section>
     </main>
     <footer>
-    <div class="fotdiv">
-        <div class="fotlogo"><h2>Fiorente</h2><p>Italian de luxe</p></div>
-        <div class="fotnav">
-            <nav>
-                <ul id="menu">
-                    <li><a href="index.html" class="navhov2">Home</a></li>
-                    <li><a href="menu.html" class="navhov2">Menu</a></li>
-                    <li><a href="#" class="navhov2"> Working Hours</a></li>
-                    <li><a href="#" class="navhov2">Chefs</a></li>
-                    <li><a href="#" class="navhov2">Reservation</a></li>
-                    <li><a href="#" class="navhov2">About US</a></li>
-                    <li><a href="#" class="navhov2">Contacts</a></li>
-                </ul>
-            </nav>
+        <div class="fotdiv">
+            <div class="fotlogo">
+                <h2>Fiorente</h2>
+                <p>Italian de luxe</p>
+            </div>
+            <div class="fotnav">
+                <nav>
+                    <ul id="menu">
+                        <li><a href="index.html" class="navhov2">Home</a></li>
+                        <li><a href="menu.html" class="navhov2">Menu</a></li>
+                        <li><a href="#" class="navhov2"> Working Hours</a></li>
+                        <li><a href="#" class="navhov2">Chefs</a></li>
+                        <li><a href="#" class="navhov2">Reservation</a></li>
+                        <li><a href="#" class="navhov2">About US</a></li>
+                        <li><a href="#" class="navhov2">Contacts</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="foticon">
+                <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="https://web.telegram.org/" target="_blank"><i class="fa-brands fa-telegram"></i></a>
+                <a href="https://twitter.com/login" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
+            </div>
+            <div class="fotp">
+                <p>2024 Florente Restaurant. All rights reserved.</p>
+            </div>
         </div>
-        <div class="foticon">
-            <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="https://web.telegram.org/" target="_blank"><i class="fa-brands fa-telegram"></i></a>
-            <a href="https://twitter.com/login" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
-        </div>
-        <div class="fotp"><p>2024 Florente Restaurant. All rights reserved.</p></div>
-    </div>
     </footer>
 
- <!-- Font Awesome kit -->
- <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
