Fixing footer and making it responsive

--- a/menu.html
+++ b/menu.html
@@ -55,6 +55,15 @@
         </div>
     </header>
     <main>
+        <section id="mainmenu">
+            <div class="mainmenuheader">
+                    <h2>Standart Menu</h2>
+            
+                    <h2>Special Menu</h2>
+               
+                    <h2>Gourment Menu</h2>  
+            </div>
+        </section>
     </main>
     <footer>
         <div class="fotdiv">
