--- a/menu.html
+++ b/menu.html
@@ -57,11 +57,108 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                    <h2>Standart Menu</h2>
-            
-                    <h2>Special Menu</h2>
-               
-                    <h2>Gourment Menu</h2>  
+                <h2>Standart Menu</h2>
+
+                <h2>Special Menu</h2>
+
+                <h2>Gourment Menu</h2>
+            </div>
+            <div class="dishes">
+                <div>
+                    <h3>Pizza</h3>
+                    <p>MARGHERITA $17<br>
+                        San Marzano tomato , mozzarella, basil, parmesan</p>
+                        <br><br>
+                    <p>SPICY SOPPRESSATA $19<br>
+                        San Marzano tomato , mozzarella, basil, local honey</p>
+                        <br><br>
+                    <p>REGINA COLLETTA $20<br>
+                        mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
+                        <br><br>
+                    <p>SAUSAGE $19<br>
+                        San Marzano tomato , smoked mozzarella, red onion</p>
+                        <br><br>
+                    <p>ZUCCHINI $24<br>
+                        mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
+                </div>
+                <div>
+                    <h3>Pasta</h3>
+                    <p>TAGLIATELLE $35<br>
+                        Pork tesa, black pepper, Braswell Farms egg, chive, parmesan</p>
+                        <br><br>
+                    <p>RIGATONI CAB $23<br>
+                        Bolognese, tomato, basil, parmesan, ricotta</p>
+                        <br><br>
+                    <p>CASARECCE $41<br>
+                        Bucatini, NC shrimp, San Marzano, Calabrian chili, lemon, pangrattato</p>
+                        <br><br>
+                    <p>RAVIOLI NERO DI SEPPIA $39<br>
+                        Butter poached lobster, artichoke, ricotta, lemon</p>
+                        <br><br>
+                    <p>DOPPIO AGNOLOTTI $28<br>
+                        Spring pea, spinach, lemon, ricotta, parmesan brodo, butter</p>
+                </div>
+                <div>
+                    <h3>Piatti</h3>
+                    <p>CHICKEN PARMESAN $32<br>
+                        Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
+                        <br>
+                        <br>
+                    <p>MARKET FISH $28<br>
+                        Fava beans, green chickpeas, tomato, red pepper, fennel</p>
+                        <br>
+                        <br>
+                    <p>SCALLOP RISOTTO $23<br>
+                        Arborio rice, pea, mint, parmesan, proscuitto</p>
+                        <br>
+                        <br>
+                    <p>
+                        HALF CHICKEN $25<br>
+                        Gnudi, lemon, ‘nudja butter, brodo, cherry pepper</p>
+                        <br>
+                        <br>
+                    <p>
+                        LASAGNA BOLOGNESE $34<br>
+                        Besciamela, beef Bolognese, basil</p>
+                </div>
+                <div>
+                    <h3>Antipasti</h3>
+                    <p>FOCACCIA $32<br>
+                        Rosemary, oregano, olive oil, sea salt, parmesan</p>
+                        <br><br>
+                    <p>CAESAR $28<br>
+                        Romaine, focaccia croutons, parmesan, lemon Caesar</p>
+                        <br><br>
+                    <p>ARUGULA $23<br>
+                        Arborio rice, pea, mint, parmesan, proscuitto</p>
+                        <br><br>
+                    <p>POLPETTE $25<br>
+                        Daily salami and cured meats, rotating cheese</p>
+                        <br><br>
+                    <p>
+                        CRISPY CLAM STRIPS $34<br>
+                        Besciamela, beef Bolognese, basil</p>
+                        <br><br>
+                    <p>
+                        MUSSELS $34<br>
+                        Lemon, salsa verde aioli, parsley
+                    </p>
+                </div>
+                <div>
+                    <h3>Margaritas Cocktail`s</h3>
+                    <p>CLASSIC  $22<br>
+                        Cimarron blanco, combier, lime</p>
+                        <br><br>
+                    <p>MEZCAL $21<br>
+                        Agua magica, giffard`s triple sec, combier, lime</p>
+                        <br><br>
+                    <p>
+                        MICHELADA $15<br>
+                        Arborio rice, pea, mint, parmesan, proscuitto</p>
+                        <br><br>
+                    <p>CHELADA $19<br>
+                        Monopolio clara, lime serrano kosho</p>
+                </div>
             </div>
         </section>
     </main>
@@ -72,17 +169,12 @@
                 <p>Italian de luxe</p>
             </div>
             <div class="fotnav">
-                <nav>
-                    <ul id="menu">
-                        <li><a href="index.html" class="navhov2">Home</a></li>
-                        <li><a href="menu.html" class="navhov2">Menu</a></li>
-                        <li><a href="#" class="navhov2"> Working Hours</a></li>
-                        <li><a href="#" class="navhov2">Chefs</a></li>
-                        <li><a href="#" class="navhov2">Reservation</a></li>
-                        <li><a href="#" class="navhov2">About US</a></li>
-                        <li><a href="#" class="navhov2">Contacts</a></li>
-                    </ul>
-                </nav>
+               <a href="">Menu</a>
+               <a href="">Working Hours</a>
+               <a href="">Chefs</a>
+               <a href="">Reservation</a>
+               <a href="">AboutUs</a>
+               <a href="">Contacts</a>
             </div>
             <div class="foticon">
                 <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-square-instagram"></i></a>
