Creating special and gourment menus pages

--- a/gourmentmenu.html
+++ b/gourmentmenu.html
@@ -57,15 +57,15 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                <a href="menu.html" class="navhov navhov2">
+                <a href="menu.html"  class="navhov">
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html" class="navhov">
+                <a href="specialmenu.html"  class="navhov">
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html"  class="navhov">
+                <a href="gourmentmenu.html"  class="navhov navhov2">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
