--- a/specialmenu.html
+++ b/specialmenu.html
@@ -57,11 +57,11 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                <a href="menu.html" class="navhov navhov2">
+                <a href="menu.html"  class="navhov">
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html" class="navhov">
+                <a href="specialmenu.html"  class="navhov navhov2">
                     <h2>Special Menu</h2>
                 </a>
 
