adding content to special and gourment menus

--- a/gourmentmenu.html
+++ b/gourmentmenu.html
@@ -65,7 +65,7 @@
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html"  class="navhov navhov2">
+                <a href="gourmentmenu.html"  class="navhov navhov3">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
@@ -89,82 +89,81 @@
                         mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
                 </div>
                 <div>
-                    <h3>Pasta</h3>
-                    <p>TAGLIATELLE $35<br>
-                        Pork tesa, black pepper, Braswell Farms egg, chive, parmesan</p>
-                    <br><br>
-                    <p>RIGATONI CAB $23<br>
-                        Bolognese, tomato, basil, parmesan, ricotta</p>
-                    <br><br>
-                    <p>CASARECCE $41<br>
-                        Bucatini, NC shrimp, San Marzano, Calabrian chili, lemon, pangrattato</p>
-                    <br><br>
-                    <p>RAVIOLI NERO DI SEPPIA $39<br>
-                        Butter poached lobster, artichoke, ricotta, lemon</p>
-                    <br><br>
-                    <p>DOPPIO AGNOLOTTI $28<br>
-                        Spring pea, spinach, lemon, ricotta, parmesan brodo, butter</p>
-                </div>
-                <div>
                     <h3>Piatti</h3>
                     <p>CHICKEN PARMESAN $32<br>
                         Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
-                    <br>
-                    <br>
+                    <br><br>
                     <p>MARKET FISH $28<br>
                         Fava beans, green chickpeas, tomato, red pepper, fennel</p>
-                    <br>
-                    <br>
+                    <br><br>
                     <p>SCALLOP RISOTTO $23<br>
                         Arborio rice, pea, mint, parmesan, proscuitto</p>
-                    <br>
-                    <br>
-                    <p>
-                        HALF CHICKEN $25<br>
+                    <br><br>
+                    <p>HALF CHICKEN $25<br>
                         Gnudi, lemon, ‘nudja butter, brodo, cherry pepper</p>
-                    <br>
-                    <br>
-                    <p>
-                        LASAGNA BOLOGNESE $34<br>
+                    <br><br>
+                    <p>LASAGNA BOLOGNESE $34<br>
                         Besciamela, beef Bolognese, basil</p>
                 </div>
                 <div>
-                    <h3>Antipasti</h3>
-                    <p>FOCACCIA $32<br>
-                        Rosemary, oregano, olive oil, sea salt, parmesan</p>
-                    <br><br>
-                    <p>CAESAR $28<br>
-                        Romaine, focaccia croutons, parmesan, lemon Caesar</p>
-                    <br><br>
-                    <p>ARUGULA $23<br>
-                        Arborio rice, pea, mint, parmesan, proscuitto</p>
-                    <br><br>
-                    <p>POLPETTE $25<br>
-                        Daily salami and cured meats, rotating cheese</p>
-                    <br><br>
+                    <h3>Pranza</h3>
+                    <p>CHICKEN PARMESAN $37<br>
+                        Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
+                    <br>
+                    <br>
+                    <p>RIGATONI CAB $27<br>
+                        Bolognese, tomato, basil, parmesan, burrata</p>
+                    <br>
+                    <br>
+                    <p>CACIO E PEPE $28<br>
+                        mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
+                    <br>
+                    <br>
                     <p>
-                        CRISPY CLAM STRIPS $34<br>
-                        Besciamela, beef Bolognese, basil</p>
-                    <br><br>
+                        TAGLIATELLE $25<br>
+                        San Marzano tomato , smoked mozzarella, red onion </p>
+                    <br>
+                    <br>
                     <p>
-                        MUSSELS $34<br>
-                        Lemon, salsa verde aioli, parsley
+                        
+                BUTTERNUT SQUASH RISOTTO $26<br>
+                mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
+                </div>
+                <div>
+                    <h3>White Wine</h3>
+                    <p>FRIULANO, Venica & Venica , Friuli-Venezia-Giulia, Italy 2020</p>
+                    <br><br>
+                    <p>GAVI DI GAVI, Palladino, Piedmont, Italy 2020</p>
+                    <br><br>
+                    <p>GRECO DI TUFO, Mastroberardino , Campania, Italy 2020</p>
+                    <br><br>
+                    <p>ROERO ARNEIS, Malabaila Di Canale, “Le Tre”, Piedmont, Italy 2021</p>
+                    <br><br>
+                    <p>KERNER, Abbazia di Novacella, Trentino-Alto Adige, Italy 2022</p>
+                    <br><br>
+                    <p> SAUVIGNON BLANC, Hunky Dory, Marlborough, New Zealand 2022
                     </p>
                 </div>
                 <div>
-                    <h3>Margaritas Cocktail`s</h3>
-                    <p>CLASSIC  $22<br>
-                        Cimarron blanco, combier, lime</p>
+                    <h3>Red Wine</h3>
+                    <p>NEBBIOLO, Giuseppe Cortese Langhe, Piedmont 2020
                     <br><br>
-                    <p>MEZCAL $21<br>
-                        Agua magica, giffard`s triple sec, combier, lime</p>
+                    <p>BAROLO, Fratelli Revello, Piedmont 2018
                     <br><br>
                     <p>
-                        MICHELADA $15<br>
-                        Arborio rice, pea, mint, parmesan, proscuitto</p>
+                        BAROLO, Renato Corino, La Morra, Piedmont 2018</p>
                     <br><br>
-                    <p>CHELADA $19<br>
-                        Monopolio clara, lime serrano kosho</p>
+                    <p>VALPOLICELLA, Pra “Morandina”, Veneto 2021</p>
+                    <br><br>
+                    <p>CHIANTI CLASSICO RISERVA, Castello di Volpaia, Tuscany 2018</p>
+                    <br><br>
+                    <p>ROSSO DI MONTALCINO, Il Poggione, Tuscany 2019</p>
+                    <br><br>
+                    <p>BRUNELLO DI MONTALCINO, Piancornello, Montalcino, 2017</p>
+                    <br><br>
+                    <p>NEBBIOLO, Giuseppe Cortese Langhe, Piedmont 2020</p>
+                    <br><br>
+                    <p>BAROLO, Fratelli Revello, Piedmont 2018</p>
                 </div>
             </div>
         </section>
