--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="navigation">
             <nav>
                 <ul id="menu">
-                    <li><a href="index.html" class="navhov2 navhov">Home</a></li>
+                    <li><a href="index.html" class="navhov navhov2">Home</a></li>
                     <li><a href="menu.html" class="navhov"> Menu</a></li>
                     <li><a href="#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="#chefs" class="navhov"> Chefs</a></li>
@@ -50,7 +50,7 @@
         </div>
         <div class="menuheadcontainer">
             <div id="menuhead">
-                <p class="navhov">Menu</p>
+                <p class="navhov">Menu</a>
             </div>
         </div>
     </header>
