--- a/specialmenu.html
+++ b/specialmenu.html
@@ -57,114 +57,119 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                <a href="menu.html"  class="navhov">
+                <a href="menu.html" class="navhov">
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html"  class="navhov navhov2">
+                <a href="specialmenu.html" class="navhov navhov3">
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html"  class="navhov">
+                <a href="gourmentmenu.html" class="navhov">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
             <div class="dishes">
                 <div>
-                    <h3>Pizza</h3>
-
-                    <p>MARGHERITA $17<br>
-                        San Marzano tomato , mozzarella, basil, parmesan</p>
-                    <br><br>
-                    <p>SPICY SOPPRESSATA $19<br>
-                        San Marzano tomato , mozzarella, basil, local honey</p>
-                    <br><br>
-                    <p>REGINA COLLETTA $20<br>
-                        mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
-                    <br><br>
-                    <p>SAUSAGE $19<br>
-                        San Marzano tomato , smoked mozzarella, red onion</p>
-                    <br><br>
-                    <p>ZUCCHINI $24<br>
-                        mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata</p>
-                </div>
-                <div>
-                    <h3>Pasta</h3>
-                    <p>TAGLIATELLE $35<br>
-                        Pork tesa, black pepper, Braswell Farms egg, chive, parmesan</p>
-                    <br><br>
-                    <p>RIGATONI CAB $23<br>
-                        Bolognese, tomato, basil, parmesan, ricotta</p>
-                    <br><br>
-                    <p>CASARECCE $41<br>
-                        Bucatini, NC shrimp, San Marzano, Calabrian chili, lemon, pangrattato</p>
-                    <br><br>
-                    <p>RAVIOLI NERO DI SEPPIA $39<br>
-                        Butter poached lobster, artichoke, ricotta, lemon</p>
-                    <br><br>
-                    <p>DOPPIO AGNOLOTTI $28<br>
-                        Spring pea, spinach, lemon, ricotta, parmesan brodo, butter</p>
-                </div>
-                <div>
                     <h3>Piatti</h3>
+
                     <p>CHICKEN PARMESAN $32<br>
                         Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
-                    <br>
-                    <br>
+                    <br><br>
                     <p>MARKET FISH $28<br>
                         Fava beans, green chickpeas, tomato, red pepper, fennel</p>
-                    <br>
-                    <br>
+                    <br><br>
                     <p>SCALLOP RISOTTO $23<br>
                         Arborio rice, pea, mint, parmesan, proscuitto</p>
-                    <br>
-                    <br>
-                    <p>
-                        HALF CHICKEN $25<br>
+                    <br><br>
+                    <p>HALF CHICKEN $25<br>
                         Gnudi, lemon, ‘nudja butter, brodo, cherry pepper</p>
-                    <br>
-                    <br>
-                    <p>
-                        LASAGNA BOLOGNESE $34<br>
+                    <br><br>
+                    <p>LASAGNA BOLOGNESE $34<br>
                         Besciamela, beef Bolognese, basil</p>
+                </div>
+                <div>
+                    <h3>Pranza</h3>
+                    <p>CHICKEN PARMESAN $37<br>
+                        Crispy Joyce Farms breast, spaghetti, vodka sauce, mozzarella, parmesan, basil</p>
+                    <br><br>
+                    <p>RIGATONI CAB $27<br>
+                        Bolognese, tomato, basil, parmesan, burrata</p>
+                    <br><br>
+                    <p>CACIO E PEPE $28<br>
+                        mozzarella, garlic, ricotta, arugula, parmesan, aged balsamic, Prosciutto</p>
+                    <br><br>
+                    <p>TAGLIATELLE $25<br>
+                        San Marzano tomato , smoked mozzarella, red onion </p>
+                    <br><br>
+                    <p>BUTTERNUT SQUASH RISOTTO $26
+                        <br>
+                        mozzarella, garlic, ricotta, artichoke, red onion, spring onion pesto, burrata
+                    </p>
                 </div>
                 <div>
                     <h3>Antipasti</h3>
                     <p>FOCACCIA $32<br>
                         Rosemary, oregano, olive oil, sea salt, parmesan</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>CAESAR $28<br>
                         Romaine, focaccia croutons, parmesan, lemon Caesar</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>ARUGULA $23<br>
                         Arborio rice, pea, mint, parmesan, proscuitto</p>
-                    <br><br>
-                    <p>POLPETTE $25<br>
+                    <br>
+                    <br>
+                    <p>
+                        POLPETTE $25<br>
                         Daily salami and cured meats, rotating cheese</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>
                         CRISPY CLAM STRIPS $34<br>
                         Besciamela, beef Bolognese, basil</p>
-                    <br><br>
+                    <br>
+                    <br>
                     <p>
                         MUSSELS $34<br>
-                        Lemon, salsa verde aioli, parsley
-                    </p>
+                        Lemon, salsa verde aioli, parsley</p>
                 </div>
                 <div>
-                    <h3>Margaritas Cocktail`s</h3>
-                    <p>CLASSIC  $22<br>
-                        Cimarron blanco, combier, lime</p>
+                    <h3>Desserts</h3>
+                    <p>TIRAMISU 15$<br>
+                        Cocoa nib nougatine, coffee chocolate sauce $14</p>
                     <br><br>
-                    <p>MEZCAL $21<br>
-                        Agua magica, giffard`s triple sec, combier, lime</p>
+                    <p>ORANGE + DARK CHOCOLATE BONET 16$<br>
+                        Orange flavored caramel, amaretti cookies, confit orange</p>
+                    <br><br>
+                    <p>SPUMONI SEMIFREDDO ALASKA $15<br>
+                        Cherry coulis, chocolate shavings</p>
+                    <br><br>
+                    <p>LEMON RICOTTA PANNA COTTA  $13<br>
+                        Honey lemon, vanilla bean meringue, candied kumquat</p>
                     <br><br>
                     <p>
-                        MICHELADA $15<br>
-                        Arborio rice, pea, mint, parmesan, proscuitto</p>
+                        STRAWBERRY SHORTCAKE  $15<br>
+                        Almond butter cake, compressed strawberries, basil snow, almond cremeux, basil oil</p>
                     <br><br>
-                    <p>CHELADA $19<br>
-                        Monopolio clara, lime serrano kosho</p>
+                </div>
+                <div>
+                    <h3>Wine</h3>
+                    <p>FRIULANO, Venica & Venica , Friuli-Venezia-Giulia, Italy 2020 </p>
+                    <br><br>
+                    <p>GAVI DI GAVI, Palladino, Piedmont, Italy 2020 </p>
+                    <br><br>
+                    <p>
+                        GRECO DI TUFO, Mastroberardino , Campania, Italy 2020</p>
+                    <br><br>
+                    <p>
+                        ROERO ARNEIS, Malabaila Di Canale, “Le Tre”, Piedmont, Italy 2021</p>
+                    <br><br>
+                    <p>
+                        KERNER, Abbazia di Novacella, Trentino-Alto Adige, Italy 2022</p>
+                    <br><br>
+                    <p>SAUVIGNON BLANC, Hunky Dory, Marlborough, New Zealand 2022 </p>
                 </div>
             </div>
         </section>
