creating aboutus section

--- a/specialmenu.html
+++ b/specialmenu.html
@@ -36,11 +36,11 @@
                 <ul id="menu">
                     <li><a href="index.html" class="navhov">Home</a></li>
                     <li><a href="menu.html" class="navhov navhov2"> Menu</a></li>
-                    <li><a href="#" class="navhov"> Working Hours</a></li>
-                    <li><a href="#" class="navhov"> Chefs</a></li>
-                    <li><a href="#" class="navhov"> Reservation</a></li>
+                    <li><a href="index.html#shedule" class="navhov"> Working Hours</a></li>
+                    <li><a href="index.html#chefs" class="navhov"> Chefs</a></li>
+                    <li><a href="index.html#reservation" class="navhov"> Reservation</a></li>
                     <li><a href="#" class="navhov"> About US</a></li>
-                    <li><a href="#" class="navhov"> Contacts</a></li>
+                    <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -57,15 +57,15 @@
     <main>
         <section id="mainmenu">
             <div class="mainmenuheader">
-                <a href="menu.html" class="navhov">
+                <a href="menu.html#mainmenu" class="navhov">
                     <h2>Standart Menu</h2>
                 </a>
 
-                <a href="specialmenu.html" class="navhov navhov3">
+                <a href="specialmenu.html#mainmenu" class="navhov navhov3">
                     <h2>Special Menu</h2>
                 </a>
 
-                <a href="gourmentmenu.html" class="navhov">
+                <a href="gourmentmenu.html#mainmenu" class="navhov">
                     <h2>Gourment Menu</h2>
                 </a>
             </div>
@@ -174,7 +174,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
                 <h2>Fiorente</h2>
