--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     <li><a href="#shedule" class="navhov"> Working Hours</a></li>
                     <li><a href="#chefs" class="navhov"> Chefs</a></li>
                     <li><a href="#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="#" class="navhov"> About US</a></li>
-                    <li><a href="#" class="navhov"> Contacts</a></li>
+                    <li><a href="aboutus.html" class="navhov"> About US</a></li>
+                    <li><a href="#footer" class="navhov"> Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -139,7 +139,7 @@
                 </div>
         </section>
     </main>
-    <footer>
+    <footer id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
                 <h2>Fiorente</h2>
