styling history section

--- a/aboutus.html
+++ b/aboutus.html
@@ -34,13 +34,13 @@
         <div class="navigation">
             <nav>
                 <ul id="menu">
-                    <li><a href="index.html" class="navhov">Home</a></li>
-                    <li><a href="menu.html" class="navhov"> Menu</a></li>
-                    <li><a href="index.html#shedule" class="navhov"> Working Hours</a></li>
-                    <li><a href="index.html#chefs" class="navhov"> Chefs</a></li>
-                    <li><a href="index.html#reservation" class="navhov"> Reservation</a></li>
-                    <li><a href="aboutus.html" class="navhov navhov2"> About US</a></li>
-                    <li><a href="#footer" class="navhov"> Contacts</a></li>
+                    <li><a href="index.html" class="navhov4">Home</a></li>
+                    <li><a href="menu.html" class="navhov4"> Menu</a></li>
+                    <li><a href="index.html#shedule" class="navhov4"> Working Hours</a></li>
+                    <li><a href="index.html#chefs" class="navhov4"> Chefs</a></li>
+                    <li><a href="index.html#reservation" class="navhov4"> Reservation</a></li>
+                    <li><a href="aboutus.html" class="navhov4 navhov2"> About US</a></li>
+                    <li><a href="#footer" class="navhov4"> Contacts</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,9 +55,28 @@
         </div>
     </header>
     <main>
-        
+        <h1 id="historyh1">Our history</h1>
+        <section id="history">
+
+            <div class="histlogo">
+                <h1>Founded in 1976</h1>
+            </div>
+            <div class="histtext">
+                <h1>The most famous restaurant in Paris</h1>
+                <p>Nestled in the heart of Paris, "Fiorente" is more than just a restaurant; it's a testament to the
+                    enduring spirit of Italian culinary tradition in the heart of the French capital. Established in the
+                    early 20th century by the visionary chef Giovanni Rossi, "Fiorente" emerged as a beacon of Italian
+                    gastronomy amidst the vibrant tapestry of Parisian cuisine.
+                    <br>
+                    Chef Giovanni Rossi, a native of Florence, brought with him a passion for the flavors and aromas of
+                    his homeland when he arrived in Paris at the turn of the century. Determined to share the authentic
+                    taste of Italy with the discerning palates of Paris, he opened "Fiorente" in a quaint corner of the
+                    city, overlooking the bustling boulevards and picturesque avenues.
+            </div>
+
+        </section>
     </main>
-    <footer id="footer">
+    <footer class="pinkfot" id="footer">
         <div class="fotdiv">
             <div class="fotlogo">
                 <h2>Fiorente</h2>
